--- a/TMS/TMS/Views/Ticket/Index.cshtml
+++ b/TMS/TMS/Views/Ticket/Index.cshtml
@@ -251,7 +251,7 @@
                     },
                     {
                         "render": function (data, type, row) {
-                            //return '<a href="#" class="view-detail" data-id=' + row[4] + '>' + row[1] + '</a>';
+                            //return '<a href="javascript:void{0}" class="view-detail" data-id=' + row[4] + '>' + row[1] + '</a>';
                             return '<a href="/Ticket/Detail/' + row[4] + '" class="view-detail">' + row[1] + '</a>';
                         },
                         "targets": 1
